crates/vexor-compiler/tests/golden/error/output/fn_missing_name.err
parse error at line 2, column 4
  |
2 | fn (x) = x * 2
  |    ^
expected identifier, not a keyword